--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,12 +147,14 @@
 
                     <com.google.android.material.slider.RangeSlider
                         android:id="@+id/slider_charge_speed"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
                         style="@style/RangeSliderStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:stepSize="10.0"
-                        android:valueFrom="0.0"
-                        android:valueTo="100.0"
+                        android:stepSize="50.0"
+                        android:valueFrom="50.0"
+                        android:valueTo="350.0"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
