--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,7 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MapFreament">
+        tools:context=".MapFragment">
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapview"
